controller/pkg/agentgateway/plugins/testdata/frontendpolicy/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: http-policy
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  frontend:
    http:
      http1HeaderCase: Preserve
      http2FrameSize: 16384
      http2MaxHeaderSize: 16Ki
      maxBufferSize: 2Ki
      maxConcurrentRequests: 100
---
# Output
output:
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      frontend:
        http:
          http1HeaderCase: PRESERVE
          http2FrameSize: 16384
          http2MaxHeaderSize: 16384
          maxBufferSize: 2048
          maxConcurrentRequests: 100
      key: frontend/default/http-policy:frontend-http:default/test
      name:
        kind: AgentgatewayPolicy
        name: http-policy
        namespace: default
      target:
        gateway:
          name: test
          namespace: default
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: http-policy
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test
        namespace: default
      conditions:
      - lastTransitionTime: fake
        message: Policy accepted
        reason: Valid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: Attached to all targets
        reason: Attached
        status: "True"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
