controller/pkg/agentgateway/plugins/testdata/frontendpolicy/metrics.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: metrics-policy
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  frontend:
    metrics:
      attributes:
        add:
        - expression: jwt.team
          name: team
        - expression: 'request.headers["x-org-id"]'
          name: org
---
# Output
output:
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      frontend:
        metrics:
          fields:
            add:
            - expression: jwt.team
              name: team
            - expression: request.headers["x-org-id"]
              name: org
      key: frontend/default/metrics-policy:frontend-metrics:default/test
      name:
        kind: AgentgatewayPolicy
        name: metrics-policy
        namespace: default
      target:
        gateway:
          name: test
          namespace: default
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: metrics-policy
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test
        namespace: default
      conditions:
      - lastTransitionTime: fake
        message: Policy accepted
        reason: Valid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: Attached to all targets
        reason: Attached
        status: "True"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
