controller/pkg/agentgateway/plugins/testdata/frontendpolicy/tracing-url.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: tracing-url
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  frontend:
    tracing:
      url: https://otel.example.com:4317/v1/traces
      protocol: HTTP


---
# Output
output:
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      frontend:
        tracing:
          inlinePolicies:
          - backendTls:
              hostname: otel.example.com
          path: /v1/traces
          providerBackend:
            inline:
              hostname: otel.example.com
              port: 4317
      key: frontend/default/tracing-url:frontend-tracing:default/test
      name:
        kind: AgentgatewayPolicy
        name: tracing-url
        namespace: default
      target:
        gateway:
          name: test
          namespace: default
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: tracing-url
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test
        namespace: default
      conditions:
      - lastTransitionTime: fake
        message: Policy accepted
        reason: Valid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: Attached to all targets
        reason: Attached
        status: "True"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
